# Insurance-Risk-Analytics-Predictive-Modeling

./: .gitignore  README.md  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: unittests.yml
data/raw/: insurance_data.txt.dvc
docs/: W3-interim_report.docx
notebooks/: task3_hypothesis_testing.ipynb  task4_predictive_modeling.ipynb
reports/: task3_analysis.md  task4_analysis.md
src/: __init__.py
src/core/: __init__.py  eda.py
src/stats/: hypothesis_testing.py
src/utils/: __init__.py  data_loader.py  data_preprocessing.py  model_interpretation.py  modeling_utils.py  visualizations.py
tests/unit/: test_data_loader.py  test_eda.py
