[project]
name = "b5w3-insurance-analytics"
version = "0.1.0"
description = "B5W3 Challenge: End-to-End Insurance Risk Analytics & Predictive Modeling"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "scipy>=1.14.1",
    "jupyter>=1.0.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"